--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
