--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.0",
     "@mui/material": "^5.11.6",
+    "@mui/styles": "^5.11.7",
     "bootstrap": "^5.2.3",
     "react": "^17.0.0",
     "react-bootstrap": "^2.7.0",
