--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "recursive-menu-react",
   "version": "0.0.0",
+  "private": true,
+  "proxy": "http://localhost:8000",
   "scripts": {
     "dev": "vite",
     "serve": "vite preview",
@@ -15,6 +17,7 @@
     "@heroicons/react": "^1.0.0",
     "@mui/material": "^5.11.6",
     "@mui/styles": "^5.11.7",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^17.0.0",
     "react-bootstrap": "^2.7.0",
