--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "recursive-menu-react",
-  "version": "0.0.0",
+  "name": "inventory_management",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "serve": "vite preview",
@@ -15,13 +15,18 @@
     "@heroicons/react": "^1.0.0",
     "@mui/material": "^5.11.6",
     "@mui/styles": "^5.11.7",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^17.0.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.1"
   },
